2019-07-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: Another convenience function

	* src/balsa-index.c (balsa_index_get_last_use_time): another
	convenience function;
	* src/balsa-index.h: declare it;
	* src/main-window.c (bw_close_mailbox_on_timer): use it.

2019-07-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	send.c: Fix the build

	* libbalsa/send.c (libbalsa_message_create_mime_message):
	LibBalsaIdentity *identity is used only in an autocrypt build.

2019-07-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: Add a convenience function
	balsa_index_get_mailbox().

	* src/balsa-index.c (balsa_index_get_mailbox): define it;
	* src/balsa-index.h: declare it;
	* src/balsa-app.c (balsa_find_index_by_mailbox):
	* src/balsa-mblist.c (bmbl_tree_expand), (bmbl_drag_cb),
	(bmbl_update_mailbox):
	* src/main-window.c (continue_activated), (print_activated),
	(mailbox_close_activated), (select_filters_activated),
	(remove_duplicates_activated), (threading_change_state),
	(bw_enable_message_menus), (balsa_window_set_thread_messages),
	(balsa_window_real_close_mbnode), (bw_find_real),
	(bw_hide_changed_set_view_filter), (bw_notebook_switch_page_cb),
	(bw_idle_cb), (bw_notebook_drag_received_cb),
	(bw_notebook_page_notify_cb), (balsa_window_next_unread):
	* src/message-window.c (mw_set_buttons_sensitive):
	* src/sendmsg-window.c (attachments_add), (drag_data_quote): use
	it.

2019-07-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: Use modern macros to declare and define.

	Make BalsaIndex opaque, and provide necessary accessors.

	* src/balsa-index.c: use G_DEFINE_TYPE to define BalsaIndex;
	(balsa_index_class_init), (bndx_destroy),
	(balsa_index_init), (balsa_index_select_thread),
	(balsa_index_get_mailbox_node), (balsa_index_get_current_msgno),
	(balsa_index_get_filter_no), (balsa_index_get_next_message),
	(balsa_index_get_prev_message), (balsa_index_get_filter_string),
	(balsa_index_set_last_use_time):