@@ -79,10 +79,7 @@ static GtkTargetEntry bmbl_drop_types[] = {
     {"x-application/x-message-list", GTK_TARGET_SAME_APP, TARGET_MESSAGES}
 };
 
-static GtkTreeViewClass *parent_class = NULL;
-
 /* class methods */
-static void bmbl_class_init(BalsaMBListClass * klass);
 static void bmbl_set_property(GObject * object, guint prop_id,
                               const GValue * value, GParamSpec * pspec);
 static void bmbl_get_property(GObject * object, guint prop_id,
@@ -93,7 +90,6 @@ static gboolean bmbl_drag_motion(GtkWidget * mblist,
 static gboolean bmbl_popup_menu(GtkWidget * widget);
 static void bmbl_select_mailbox(GtkTreeSelection * selection,
                                 gpointer data);
-static void bmbl_init(BalsaMBList * mblist);
 static gboolean bmbl_selection_func(GtkTreeSelection * selection,
                                     GtkTreeModel * model,
                                     GtkTreePath * path,
@@ -141,41 +137,26 @@ static void bmbl_expand_to_row(BalsaMBList * mblist, GtkTreePath * path);
 
 /* class methods */
 
-GType
-balsa_mblist_get_type(void)
-{
-    static GType mblist_type = 0;
+struct _BalsaMBList {
+    GtkTreeView tree_view;
 
-    if (!mblist_type) {
-	static const GTypeInfo mblist_info = {
-	    sizeof(BalsaMBListClass),
-            NULL,               /* base_init */
-            NULL,               /* base_finalize */
-	    (GClassInitFunc) bmbl_class_init,
-            NULL,               /* class_finalize */
-            NULL,               /* class_data */
-	    sizeof(BalsaMBList),
-            0,                  /* n_preallocs */
-	    (GInstanceInitFunc) bmbl_init
-	};
+    /* shall the number of messages be displayed ? */
+    gboolean display_info;
+    /* signal handler id */
+    gulong toggled_handler_id;
 
-	mblist_type =
-            g_type_register_static(GTK_TYPE_TREE_VIEW,
-	                           "BalsaMBList",
-                                   &mblist_info, 0);
-    }
+    /* to set sort order in an idle callback */
+    gint  sort_column_id;
+    guint sort_idle_id;
+};
 
-    return mblist_type;
-}
-
+G_DEFINE_TYPE(BalsaMBList, balsa_mblist, GTK_TYPE_TREE_VIEW)
 
 static void
-bmbl_class_init(BalsaMBListClass * klass)
+balsa_mblist_class_init(BalsaMBListClass * klass)
 {
     GObjectClass *object_class;
     GtkWidgetClass *widget_class;
-
-    parent_class = g_type_class_peek_parent(klass);
 
     object_class = (GObjectClass *) klass;
     widget_class = (GtkWidgetClass *) klass;
@@ -186,7 +167,7 @@ bmbl_class_init(BalsaMBListClass * klass)
         g_signal_new("has-unread-mailbox",
                      G_TYPE_FROM_CLASS(object_class),
                      G_SIGNAL_RUN_FIRST,
-                     G_STRUCT_OFFSET(BalsaMBListClass, has_unread_mailbox),
+                     0,
                      NULL, NULL,
                      NULL,
                      G_TYPE_NONE,
@@ -199,9 +180,6 @@ bmbl_class_init(BalsaMBListClass * klass)
     /* GtkWidget signals */
     widget_class->drag_motion = bmbl_drag_motion;
     widget_class->popup_menu = bmbl_popup_menu;
-
-    /* Signals */
-    klass->has_unread_mailbox = NULL;
 
     /* Properties */
     g_object_class_install_property(object_class, PROP_SHOW_CONTENT_INFO,
@@ -310,7 +288,7 @@ bmbl_drag_motion(GtkWidget * mblist, GdkDragContext * context, gint x,
     gboolean can_drop;
 
     ret_val =
-        GTK_WIDGET_CLASS(parent_class)->drag_motion(mblist, context, x, y,
+        GTK_WIDGET_CLASS(balsa_mblist_parent_class)->drag_motion(mblist, context, x, y,
                                                     time);
 
     gtk_tree_view_get_drag_dest_row(tree_view, &path, NULL);
@@ -335,7 +313,7 @@ bmbl_drag_motion(GtkWidget * mblist, GdkDragContext * context, gint x,
  * callbacks
  */
 static void
-bmbl_init(BalsaMBList * mblist)
+balsa_mblist_init(BalsaMBList * mblist)
 {
     GtkTreeStore *store = balsa_mblist_get_store();
     GtkTreeView *tree_view = GTK_TREE_VIEW(mblist);
